--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -101,6 +101,7 @@
                             android:id="@+id/text_username"
                             tools:text="your@email.com"
                             android:alpha="0.7"
+                            android:textColor="?android:textColorPrimary"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
@@ -114,6 +115,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:alpha="0.7"
+                            android:textColor="?android:textColorPrimary"
                             tools:text="Level"
                             android:textSize="18sp"
                             android:layout_gravity="center_horizontal"
@@ -140,6 +142,7 @@
                             android:id="@+id/button_change_email"
                             android:textSize="16sp"
                             android:text="@string/change_email"
+                            android:textColor="?android:textColorPrimary"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="16dp"
@@ -152,6 +155,7 @@
                             android:id="@+id/button_change_username"
                             android:textSize="16sp"
                             android:text="@string/change_username"
+                            android:textColor="?android:textColorPrimary"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="16dp"
@@ -164,6 +168,7 @@
                             android:id="@+id/button_change_password"
                             android:textSize="16sp"
                             android:text="@string/change_password"
+                            android:textColor="?android:textColorPrimary"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="16dp"
