--- a/app/src/main/res/layout-land/card_word.xml
+++ b/app/src/main/res/layout-land/card_word.xml
@@ -33,6 +33,7 @@
 
         <TextView
                 tools:text="word"
+                android:textColor="?android:textColorPrimary"
                 android:textAlignment="center"
                 android:layout_width="350dp"
                 android:textSize="32sp"
@@ -53,6 +54,7 @@
 
         <TextView
                 tools:text="слово"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -79,6 +81,7 @@
 
         <TextView
                 tools:text="word"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -163,6 +166,7 @@
 
         <TextView
                 tools:text="word"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -228,6 +232,7 @@
                 <Button
                         android:id="@+id/help_word_button"
                         android:layout_width="wrap_content"
+                        android:textColor="?android:colorAccent"
                         android:layout_height="wrap_content"
                         style="@style/Widget.AppCompat.Button.Borderless.Colored"
                         android:drawableStart="@drawable/ic_help_outline_orange_24dp"
@@ -248,6 +253,7 @@
 
         <TextView
                 tools:text="word"
+                android:textColor="?android:textColorPrimary"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -293,6 +299,7 @@
                     android:id="@+id/choose_one_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word1"
                     android:layout_margin="8dp"
@@ -302,6 +309,7 @@
                     android:id="@+id/choose_two_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word2"
                     android:layout_margin="8dp"
@@ -311,6 +319,7 @@
                     android:id="@+id/choose_three_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word3"
                     android:layout_margin="8dp"
@@ -320,6 +329,7 @@
                     android:id="@+id/choose_four_button"
                     android:layout_height="70dp"
                     android:layout_width="170dp"
+                    android:textColor="?android:colorAccent"
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     tools:text="word4"
                     android:layout_margin="8dp"
