--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -37,6 +37,7 @@
                 android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
+                android:textColor="?android:textColorPrimary"
                 android:layout_width="350dp"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"
@@ -58,6 +59,7 @@
                 android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
+                android:textColor="?android:textColorPrimary"
                 android:textAlignment="center"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
@@ -88,6 +90,7 @@
                 android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
+                android:textColor="?android:textColorPrimary"
                 android:layout_width="350dp"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"
@@ -167,12 +170,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="50dp"
-            android:visibility="gone">
+            android:visibility="visible">
 
         <TextView
                 tools:text="word"
                 android:alpha="0.7"
                 android:textSize="32sp"
+                android:textColor="?android:textColorPrimary"
                 android:textStyle="bold"
                 android:layout_width="350dp"
                 android:textAlignment="center"
@@ -228,6 +232,7 @@
                         android:id="@+id/help_word_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="?android:colorAccent"
                         style="@style/Widget.AppCompat.Button.Borderless.Colored"
                         android:drawableStart="@drawable/ic_help_outline_orange_24dp"
                         android:drawablePadding="8dp"
@@ -278,6 +283,7 @@
                 android:alpha="0.7"
                 android:textSize="32sp"
                 android:textStyle="bold"
+                android:textColor="?android:textColorPrimary"
                 android:layout_width="350dp"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"
