--- a/app/src/main/res/layout/element_category_widget.xml
+++ b/app/src/main/res/layout/element_category_widget.xml
@@ -19,6 +19,7 @@
             tools:text="Category"
             android:textSize="16sp"
             android:layout_width="wrap_content"
+            android:textColor="?android:textColorPrimary"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"/>
 
