--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -22,6 +22,7 @@
             android:id="@+id/text_desc"
             android:text="@string/input_email"
             android:textSize="16sp"
+            android:textColor="?android:textColorPrimary"
             android:layout_width="312dp"
             android:layout_height="65dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
