--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -112,6 +112,7 @@
                     android:text="@string/you_already_learn_today"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:textSize="18sp"
+                    android:textColor="?android:textColorPrimary"
                     android:layout_width="wrap_content"
                     android:textAlignment="center"
                     android:layout_height="wrap_content"/>
