--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -32,6 +32,7 @@
                     android:text="@string/dark_theme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?android:textColorPrimary"
                     android:textSize="12sp"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="16dp"/>
@@ -60,6 +61,7 @@
                             android:text="@string/setup_dark_theme"
                             android:textSize="16sp"
                             android:layout_width="wrap_content"
+                            android:textColor="?android:textColorPrimary"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_margin="16dp"/>
@@ -73,6 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
+                    android:textColor="?android:textColorPrimary"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="16dp"/>
 
@@ -100,6 +103,7 @@
                             android:text="@string/about_application"
                             android:textSize="16sp"
                             android:layout_width="wrap_content"
+                            android:textColor="?android:textColorPrimary"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_margin="16dp"
