--- a/app/src/main/res/layout/fragment_username.xml
+++ b/app/src/main/res/layout/fragment_username.xml
@@ -7,9 +7,9 @@
                                                    android:layout_height="match_parent">
 
     <EditText
-            android:hint="@string/password"
-            android:id="@+id/edittext_password"
-            android:inputType="textPassword"
+            android:hint="@string/username"
+            android:id="@+id/edittext_username"
+            android:inputType="text"
             android:imeOptions="actionDone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
@@ -20,14 +20,26 @@
 
     <TextView
             android:id="@+id/text_desc"
-            android:text="@string/input_password"
+            android:text="@string/pick_username"
             android:textSize="16sp"
-            android:textColor="?android:textColorPrimary"
             android:layout_width="312dp"
             android:layout_height="65dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edittext_password"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edittext_username"
             app:layout_constraintHorizontal_bias="0.518" app:layout_constraintVertical_bias="0.003"/>
+
+    <Button
+            android:id="@+id/button_username_skip"
+            android:text="@string/skip"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:textColor="?android:colorAccent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.973"
+            app:layout_constraintVertical_bias="0.011"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
