--- a/app/src/main/res/layout-land/card_word.xml
+++ b/app/src/main/res/layout-land/card_word.xml
@@ -29,7 +29,17 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:id="@+id/layout_show_word"
-            android:visibility="gone">
+            android:visibility="visible">
+
+        <ImageButton
+                android:id="@+id/button_sound"
+                android:src="@drawable/ic_sound_orange_24dp"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="8dp"
+                android:contentDescription="sound button"/>
 
         <TextView
                 tools:text="word"
@@ -204,7 +214,6 @@
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.844">
 
-            <!--FIXME: word/translate issue, fix hint-->
             <EditText
                     android:id="@+id/word_written_edit_text"
                     android:layout_width="250dp"
