--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -30,7 +30,17 @@
             android:layout_width="match_parent"
             android:id="@+id/layout_show_word"
             android:layout_marginBottom="100dp"
-            android:visibility="gone">
+            android:visibility="visible">
+
+        <ImageButton
+                android:id="@+id/button_sound"
+                android:src="@drawable/ic_sound_orange_24dp"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:contentDescription="sound button"/>
 
         <TextView
                 tools:text="word"
@@ -203,7 +213,6 @@
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal|center_vertical">
 
-            <!--FIXME: word/translate issue, fix hint-->
             <EditText
                     android:id="@+id/word_written_edit_text"
                     android:layout_width="250dp"
